positioning the status bar near at the bottom of the window

--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,11 @@ canvas#mainCanvas {
   height: 100%;
   min-height: 100%;
 }
+
+#statusBar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 24px;
+  width: 100%;
+}
